Fix alignment

--- a/css/common.css
+++ b/css/common.css
@@ -249,6 +249,8 @@ footer.qsm-popup__footer button.qsm-popup-secondary-button:hover {
 .qsm-quiz-container input[type=checkbox],
 .qsm-quiz-container input[type=radio] {
 	cursor: pointer;
+	position: relative;
+	top: 2px;
 }
 .qmn_accept_answers input[type=checkbox] {
 	vertical-align: top;
